# osci-dash

./: .env  Cargo.toml
migrations/2018-09-03-142442_create_matrices/: down.sql  up.sql
migrations/2018-09-03-142446_create_jobs/: up.sql
migrations/2018-09-03-142449_create_runs/: down.sql  up.sql
src/: main.rs  schema.rs
src/jenkins/: job.rs  matrix.rs  mod.rs  run.rs
