[package]
name = "osci-dash"
version = "0.1.0"
authors = ["Chris MacNaughton <chris@centaurisolutions.nl>"]

[dependencies]
chrono = { version = "*", features = ["serde"] }
diesel = { version = "1.3.0", features = ["sqlite", "r2d2", "chrono"] }
dotenv = "0.10"
lazy_static = "*"
rocket = "*"
rocket_codegen = "*"